gitops/manifests/clusters/simpsons/aggregate/workloads/frigate/patch-cert-keys.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate
  namespace: frigate
spec:
  template:
    spec:
      volumes:
      - name: ssl-certs
        secret:
          secretName: frigate-certs
          items:
          - key: tls.crt
            path: fullchain.pem
          - key: tls.key
            path: privkey.pem
