gitops/manifests/clusters/simpsons/aggregate/workloads/frigate/patch-route-host.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frigate-web
  namespace: frigate
spec:
  host: frigate.gfontana.me
